--- a/src/html/templates/header.html
+++ b/src/html/templates/header.html
@@ -1,3 +1,10 @@
-<script type="text/template" id="header">
-	header
-</script>
+<div class="header" id="header">
+	<div class="header__layout clearfix">
+		<a href="#" class="btn header__btn left">
+			<i class="icon icon_menu"></a>
+		</a>
+		<a href="#" class="btn header__btn right">
+			<i class="icon icon_search"></a>
+		</a>
+	</div>
+</div>
