--- a/src/css/header.less
+++ b/src/css/header.less
@@ -10,6 +10,7 @@
 		height: 44px;
 		max-width: 700px;
 		margin: 0 auto;
+		position: relative;
 	}
 
 	&__btn {
@@ -21,5 +22,29 @@
 			background: #BB8F5C;
 		}
 	}
-}
 
+	&__drop-down {
+		background: #fff;
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 100%;
+		box-shadow: 0px 3px 5px rgba(93,109,157,0.3);
+	}
+
+	&__list {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+
+		&_item {
+			border-bottom: 1px solid #cdd4e1;
+
+			&:last-child{
+				border-bottom: 0;
+			}
+		}
+
+		
+	}
+}
