--- a/src/css/reset.less
+++ b/src/css/reset.less
@@ -70,15 +70,10 @@ input[type="submit"] {
 }
 
 /*
-* 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
-* 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
-*    (include `-moz` to future-proof).
+*  Address `appearance` set to `searchfield` in Safari 5 and Chrome.
 */
 input[type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box; /* 2 */
-    box-sizing: content-box;
+    -webkit-appearance: textfield; 
 }
 
 /*
