--- a/src/css/header.less
+++ b/src/css/header.less
@@ -18,6 +18,10 @@
 		height: 16px;
 		width: 16px;
 
+		&:active {
+			padding: 15px 14px 13px 14px;
+		}
+
 		&.active {
 			background: #BB8F5C;
 		}
