--- a/src/css/sprite/icons.less
+++ b/src/css/sprite/icons.less
@@ -19,9 +19,20 @@ At the bottom of this section, we provide information about the spritesheet itse
 @menu-width: 16px;
 @menu-height: 16px;
 @menu-total-width: 32px;
-@menu-total-height: 16px;
+@menu-total-height: 29px;
 @menu-image: '../images/icons.png';
-@menu: 0px 0px 0px 0px 16px 16px 32px 16px '../images/icons.png' 'menu';
+@menu: 0px 0px 0px 0px 16px 16px 32px 29px '../images/icons.png' 'menu';
+@next-name: 'next';
+@next-x: 0px;
+@next-y: 16px;
+@next-offset-x: 0px;
+@next-offset-y: -16px;
+@next-width: 9px;
+@next-height: 13px;
+@next-total-width: 32px;
+@next-total-height: 29px;
+@next-image: '../images/icons.png';
+@next: 0px 16px 0px -16px 9px 13px 32px 29px '../images/icons.png' 'next';
 @search-name: 'search';
 @search-x: 16px;
 @search-y: 0px;
@@ -30,14 +41,14 @@ At the bottom of this section, we provide information about the spritesheet itse
 @search-width: 16px;
 @search-height: 16px;
 @search-total-width: 32px;
-@search-total-height: 16px;
+@search-total-height: 29px;
 @search-image: '../images/icons.png';
-@search: 16px 0px -16px 0px 16px 16px 32px 16px '../images/icons.png' 'search';
+@search: 16px 0px -16px 0px 16px 16px 32px 29px '../images/icons.png' 'search';
 @spritesheet-width: 32px;
-@spritesheet-height: 16px;
+@spritesheet-height: 29px;
 @spritesheet-image: '../images/icons.png';
-@spritesheet-sprites: @menu @search;
-@spritesheet: 32px 16px '../images/icons.png' @spritesheet-sprites;
+@spritesheet-sprites: @menu @next @search;
+@spritesheet: 32px 29px '../images/icons.png' @spritesheet-sprites;
 
 /*
 The provided classes are intended to be used with the array-like variables
