--- a/src/html/templates/content.html
+++ b/src/html/templates/content.html
@@ -1,3 +1,5 @@
-<div class="content" id="content">
+<script type="text/template" id="content_template">
+	<div class="content" id="content">
 
-</div>
+	</div>
+</script>
