--- a/src/css/common.less
+++ b/src/css/common.less
@@ -65,3 +65,8 @@ body {
 	box-shadow: inset 0px 3px 5px #cdd2de;
 	font-size: 1em;
 }
+
+.no-select {
+	user-select: none;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
