--- a/src/css/reset.less
+++ b/src/css/reset.less
@@ -70,16 +70,10 @@ input[type="submit"] {
 }
 
 /*
-*  Address `appearance` set to `searchfield` in Safari 5 and Chrome.
-*/
-input[type="search"] {
-    -webkit-appearance: textfield; 
-}
-
-/*
 * Remove inner padding and search cancel button in Safari 5 and Chrome
 * on OS X.
 */
+input[type="search"],
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
