--- a/src/css/common.less
+++ b/src/css/common.less
@@ -33,7 +33,6 @@ body {
 		  display: block;
 		  content: '';
 		}
-
 	}
 }
 
@@ -69,4 +68,18 @@ body {
 .no-select {
 	user-select: none;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
+
+.list {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+
+	&__item {
+		border-bottom: 1px solid #cdd4e1;
+
+		&:last-child{
+			border-bottom: 0;
+		}
+	}
 }
