--- a/src/html/templates/header.html
+++ b/src/html/templates/header.html
@@ -14,28 +14,21 @@
 					<input type="search" value="" placeholder="Enter city" autocapitalize="off" autocorrect="off" autocomplete="off" class="input-text" id="search_input" />
 				</div>
 
-				<ul class="header__list">
-					<li class="header__list_item">
+				<ul class="list" id="header_search_list_ul">
+					<li class="list__item">
 						<a href="#" class="btn btn_link">Saint Petersburg</a>
 					</li>
-					<li class="header__list_item">
+					<li class="list__item">
 						<a href="#" class="btn btn_link">Moscow</a>
 					</li>
-					<li class="header__list_item">
+					<li class="list__item">
 						<a href="#" class="btn btn_link">London</a>
 					</li>
 				</ul>
 			</div>
 
 			<div class="header__drop-down hidden" id="header_cities_list">
-				<ul class="header__list">
-					<li class="header__list_item">
-						<a href="#" class="btn btn_link">Washigton</a>
-					</li>
-					<li class="header__list_item">
-						<a href="#" class="btn btn_link">Sydney</a>
-					</li>
-				</ul>
+				<ul class="list" id="header_cities_list_ul"></ul>
 			</div>
 		</div>
 	</div>
