add routres, ajax cities requests

--- a/src/html/templates/header.html
+++ b/src/html/templates/header.html
@@ -14,17 +14,7 @@
 					<input type="search" value="" placeholder="Enter city" autocapitalize="off" autocorrect="off" autocomplete="off" class="input-text" id="search_input" />
 				</div>
 
-				<ul class="list" id="header_search_list_ul">
-					<li class="list__item">
-						<a href="#" class="btn btn_link">Saint Petersburg</a>
-					</li>
-					<li class="list__item">
-						<a href="#" class="btn btn_link">Moscow</a>
-					</li>
-					<li class="list__item">
-						<a href="#" class="btn btn_link">London</a>
-					</li>
-				</ul>
+				<ul class="list" id="header_search_list_ul"></ul>
 			</div>
 
 			<div class="header__drop-down hidden" id="header_cities_list">
