--- a/src/html/templates/list_link.html
+++ b/src/html/templates/list_link.html
@@ -1,5 +1,7 @@
 <script type="text/template" id="list_link_template">
-	<li class="list__item">
-		<a href="#<%= link %>" class="btn btn_link"><%= name %></a>
-	</li>
+	<% if (name) { %>
+		<li class="list__item">
+			<a href="#/city/<%= link %>" class="btn btn_link"><%= name %></a>
+		</li>
+	<% } %>
 </script>
