--- a/src/css/sprite/icons.less
+++ b/src/css/sprite/icons.less
@@ -11,44 +11,242 @@ The large array-like variables contain all information about a single icon
 At the bottom of this section, we provide information about the spritesheet itself
 @spritesheet: width height image @spritesheet-sprites;
 */
+@01d-name: '01d';
+@01d-x: 50px;
+@01d-y: 0px;
+@01d-offset-x: -50px;
+@01d-offset-y: 0px;
+@01d-width: 50px;
+@01d-height: 50px;
+@01d-total-width: 250px;
+@01d-total-height: 200px;
+@01d-image: '../images/icons.png';
+@01d: 50px 0px -50px 0px 50px 50px 250px 200px '../images/icons.png' '01d';
+@01n-name: '01n';
+@01n-x: 150px;
+@01n-y: 50px;
+@01n-offset-x: -150px;
+@01n-offset-y: -50px;
+@01n-width: 50px;
+@01n-height: 50px;
+@01n-total-width: 250px;
+@01n-total-height: 200px;
+@01n-image: '../images/icons.png';
+@01n: 150px 50px -150px -50px 50px 50px 250px 200px '../images/icons.png' '01n';
+@02d-name: '02d';
+@02d-x: 0px;
+@02d-y: 50px;
+@02d-offset-x: 0px;
+@02d-offset-y: -50px;
+@02d-width: 50px;
+@02d-height: 50px;
+@02d-total-width: 250px;
+@02d-total-height: 200px;
+@02d-image: '../images/icons.png';
+@02d: 0px 50px 0px -50px 50px 50px 250px 200px '../images/icons.png' '02d';
+@02n-name: '02n';
+@02n-x: 50px;
+@02n-y: 50px;
+@02n-offset-x: -50px;
+@02n-offset-y: -50px;
+@02n-width: 50px;
+@02n-height: 50px;
+@02n-total-width: 250px;
+@02n-total-height: 200px;
+@02n-image: '../images/icons.png';
+@02n: 50px 50px -50px -50px 50px 50px 250px 200px '../images/icons.png' '02n';
+@03d-name: '03d';
+@03d-x: 100px;
+@03d-y: 0px;
+@03d-offset-x: -100px;
+@03d-offset-y: 0px;
+@03d-width: 50px;
+@03d-height: 50px;
+@03d-total-width: 250px;
+@03d-total-height: 200px;
+@03d-image: '../images/icons.png';
+@03d: 100px 0px -100px 0px 50px 50px 250px 200px '../images/icons.png' '03d';
+@03n-name: '03n';
+@03n-x: 100px;
+@03n-y: 50px;
+@03n-offset-x: -100px;
+@03n-offset-y: -50px;
+@03n-width: 50px;
+@03n-height: 50px;
+@03n-total-width: 250px;
+@03n-total-height: 200px;
+@03n-image: '../images/icons.png';
+@03n: 100px 50px -100px -50px 50px 50px 250px 200px '../images/icons.png' '03n';
+@04d-name: '04d';
+@04d-x: 0px;
+@04d-y: 100px;
+@04d-offset-x: 0px;
+@04d-offset-y: -100px;
+@04d-width: 50px;
+@04d-height: 50px;
+@04d-total-width: 250px;
+@04d-total-height: 200px;
+@04d-image: '../images/icons.png';
+@04d: 0px 100px 0px -100px 50px 50px 250px 200px '../images/icons.png' '04d';
+@04n-name: '04n';
+@04n-x: 50px;
+@04n-y: 100px;
+@04n-offset-x: -50px;
+@04n-offset-y: -100px;
+@04n-width: 50px;
+@04n-height: 50px;
+@04n-total-width: 250px;
+@04n-total-height: 200px;
+@04n-image: '../images/icons.png';
+@04n: 50px 100px -50px -100px 50px 50px 250px 200px '../images/icons.png' '04n';
+@09d-name: '09d';
+@09d-x: 100px;
+@09d-y: 100px;
+@09d-offset-x: -100px;
+@09d-offset-y: -100px;
+@09d-width: 50px;
+@09d-height: 50px;
+@09d-total-width: 250px;
+@09d-total-height: 200px;
+@09d-image: '../images/icons.png';
+@09d: 100px 100px -100px -100px 50px 50px 250px 200px '../images/icons.png' '09d';
+@09n-name: '09n';
+@09n-x: 150px;
+@09n-y: 0px;
+@09n-offset-x: -150px;
+@09n-offset-y: 0px;
+@09n-width: 50px;
+@09n-height: 50px;
+@09n-total-width: 250px;
+@09n-total-height: 200px;
+@09n-image: '../images/icons.png';
+@09n: 150px 0px -150px 0px 50px 50px 250px 200px '../images/icons.png' '09n';
+@10d-name: '10d';
+@10d-x: 0px;
+@10d-y: 0px;
+@10d-offset-x: 0px;
+@10d-offset-y: 0px;
+@10d-width: 50px;
+@10d-height: 50px;
+@10d-total-width: 250px;
+@10d-total-height: 200px;
+@10d-image: '../images/icons.png';
+@10d: 0px 0px 0px 0px 50px 50px 250px 200px '../images/icons.png' '10d';
+@10n-name: '10n';
+@10n-x: 150px;
+@10n-y: 100px;
+@10n-offset-x: -150px;
+@10n-offset-y: -100px;
+@10n-width: 50px;
+@10n-height: 50px;
+@10n-total-width: 250px;
+@10n-total-height: 200px;
+@10n-image: '../images/icons.png';
+@10n: 150px 100px -150px -100px 50px 50px 250px 200px '../images/icons.png' '10n';
+@11d-name: '11d';
+@11d-x: 0px;
+@11d-y: 150px;
+@11d-offset-x: 0px;
+@11d-offset-y: -150px;
+@11d-width: 50px;
+@11d-height: 50px;
+@11d-total-width: 250px;
+@11d-total-height: 200px;
+@11d-image: '../images/icons.png';
+@11d: 0px 150px 0px -150px 50px 50px 250px 200px '../images/icons.png' '11d';
+@11n-name: '11n';
+@11n-x: 50px;
+@11n-y: 150px;
+@11n-offset-x: -50px;
+@11n-offset-y: -150px;
+@11n-width: 50px;
+@11n-height: 50px;
+@11n-total-width: 250px;
+@11n-total-height: 200px;
+@11n-image: '../images/icons.png';
+@11n: 50px 150px -50px -150px 50px 50px 250px 200px '../images/icons.png' '11n';
+@13d-name: '13d';
+@13d-x: 100px;
+@13d-y: 150px;
+@13d-offset-x: -100px;
+@13d-offset-y: -150px;
+@13d-width: 50px;
+@13d-height: 50px;
+@13d-total-width: 250px;
+@13d-total-height: 200px;
+@13d-image: '../images/icons.png';
+@13d: 100px 150px -100px -150px 50px 50px 250px 200px '../images/icons.png' '13d';
+@13n-name: '13n';
+@13n-x: 150px;
+@13n-y: 150px;
+@13n-offset-x: -150px;
+@13n-offset-y: -150px;
+@13n-width: 50px;
+@13n-height: 50px;
+@13n-total-width: 250px;
+@13n-total-height: 200px;
+@13n-image: '../images/icons.png';
+@13n: 150px 150px -150px -150px 50px 50px 250px 200px '../images/icons.png' '13n';
+@50d-name: '50d';
+@50d-x: 200px;
+@50d-y: 0px;
+@50d-offset-x: -200px;
+@50d-offset-y: 0px;
+@50d-width: 50px;
+@50d-height: 50px;
+@50d-total-width: 250px;
+@50d-total-height: 200px;
+@50d-image: '../images/icons.png';
+@50d: 200px 0px -200px 0px 50px 50px 250px 200px '../images/icons.png' '50d';
+@50n-name: '50n';
+@50n-x: 200px;
+@50n-y: 50px;
+@50n-offset-x: -200px;
+@50n-offset-y: -50px;
+@50n-width: 50px;
+@50n-height: 50px;
+@50n-total-width: 250px;
+@50n-total-height: 200px;
+@50n-image: '../images/icons.png';
+@50n: 200px 50px -200px -50px 50px 50px 250px 200px '../images/icons.png' '50n';
 @menu-name: 'menu';
-@menu-x: 0px;
-@menu-y: 0px;
-@menu-offset-x: 0px;
-@menu-offset-y: 0px;
+@menu-x: 200px;
+@menu-y: 100px;
+@menu-offset-x: -200px;
+@menu-offset-y: -100px;
 @menu-width: 16px;
 @menu-height: 16px;
-@menu-total-width: 32px;
-@menu-total-height: 29px;
+@menu-total-width: 250px;
+@menu-total-height: 200px;
 @menu-image: '../images/icons.png';
-@menu: 0px 0px 0px 0px 16px 16px 32px 29px '../images/icons.png' 'menu';
+@menu: 200px 100px -200px -100px 16px 16px 250px 200px '../images/icons.png' 'menu';
 @next-name: 'next';
-@next-x: 0px;
-@next-y: 16px;
-@next-offset-x: 0px;
-@next-offset-y: -16px;
+@next-x: 232px;
+@next-y: 100px;
+@next-offset-x: -232px;
+@next-offset-y: -100px;
 @next-width: 9px;
 @next-height: 13px;
-@next-total-width: 32px;
-@next-total-height: 29px;
+@next-total-width: 250px;
+@next-total-height: 200px;
 @next-image: '../images/icons.png';
-@next: 0px 16px 0px -16px 9px 13px 32px 29px '../images/icons.png' 'next';
+@next: 232px 100px -232px -100px 9px 13px 250px 200px '../images/icons.png' 'next';
 @search-name: 'search';
-@search-x: 16px;
-@search-y: 0px;
-@search-offset-x: -16px;
-@search-offset-y: 0px;
+@search-x: 216px;
+@search-y: 100px;
+@search-offset-x: -216px;
+@search-offset-y: -100px;
 @search-width: 16px;
 @search-height: 16px;
-@search-total-width: 32px;
-@search-total-height: 29px;
+@search-total-width: 250px;
+@search-total-height: 200px;
 @search-image: '../images/icons.png';
-@search: 16px 0px -16px 0px 16px 16px 32px 29px '../images/icons.png' 'search';
-@spritesheet-width: 32px;
-@spritesheet-height: 29px;
+@search: 216px 100px -216px -100px 16px 16px 250px 200px '../images/icons.png' 'search';
+@spritesheet-width: 250px;
+@spritesheet-height: 200px;
 @spritesheet-image: '../images/icons.png';
-@spritesheet-sprites: @menu @next @search;
-@spritesheet: 32px 29px '../images/icons.png' @spritesheet-sprites;
+@spritesheet-sprites: @01d @01n @02d @02n @03d @03n @04d @04n @09d @09n @10d @10n @11d @11n @13d @13n @50d @50n @menu @next @search;
+@spritesheet: 250px 200px '../images/icons.png' @spritesheet-sprites;
 
 /*
 The provided classes are intended to be used with the array-like variables
