--- a/src/html/templates/forecast.html
+++ b/src/html/templates/forecast.html
@@ -29,7 +29,7 @@
 						%>
 
 							<%= weather.description %>
-							<img src="images/weather/<%= weather.icon %>.png" alt="<%= weather.description %>" />
+							<div class="icon icon_<%= weather.icon %>" title="<%= weather.description %>"></div>
 						
 						<%
 						    });
