--- a/src/css/common.less
+++ b/src/css/common.less
@@ -25,13 +25,13 @@ body {
 		}
 
 		&:after {
-		  .sprite(@next);
-		  position: absolute;
-		  top: 50%;
-		  margin-top: -6px;
-		  right: 10px;
-		  display: block;
-		  content: '';
+			.sprite(@next);
+			position: absolute;
+			top: 50%;
+			margin-top: -6px;
+			right: 10px;
+			display: block;
+			content: '';
 		}
 	}
 }
@@ -82,4 +82,11 @@ body {
 			border-bottom: 0;
 		}
 	}
+}
+
+.title {
+	font-weight: bold;
+	font-size: 19/16em;
+	padding: 0;
+	margin: 0 0 15px 0;
 }
