--- a/src/html/templates/city.html
+++ b/src/html/templates/city.html
@@ -1,6 +1,6 @@
 <script type="text/template" id="city_template">
 	<div class="block">
-		<h1><%= city %></h1>
+		<h1 class="title"><%= city %></h1>
 		<a href="#" class="js-bookmark_toggle">+</a>
 		<a href="#" class="js-update_forecast">Update Forecast</a>
 
