--- a/src/css/sprite/icons.less
+++ b/src/css/sprite/icons.less
@@ -24,15 +24,15 @@ At the bottom of this section, we provide information about the spritesheet itse
 @01d: 50px 0px -50px 0px 50px 50px 250px 200px '../images/icons.png' '01d';
 @01n-name: '01n';
 @01n-x: 150px;
-@01n-y: 50px;
+@01n-y: 100px;
 @01n-offset-x: -150px;
-@01n-offset-y: -50px;
+@01n-offset-y: -100px;
 @01n-width: 50px;
 @01n-height: 50px;
 @01n-total-width: 250px;
 @01n-total-height: 200px;
 @01n-image: '../images/icons.png';
-@01n: 150px 50px -150px -50px 50px 50px 250px 200px '../images/icons.png' '01n';
+@01n: 150px 100px -150px -100px 50px 50px 250px 200px '../images/icons.png' '01n';
 @02d-name: '02d';
 @02d-x: 0px;
 @02d-y: 50px;
@@ -122,27 +122,27 @@ At the bottom of this section, we provide information about the spritesheet itse
 @09n-image: '../images/icons.png';
 @09n: 150px 0px -150px 0px 50px 50px 250px 200px '../images/icons.png' '09n';
 @10d-name: '10d';
-@10d-x: 0px;
-@10d-y: 0px;
-@10d-offset-x: 0px;
-@10d-offset-y: 0px;
+@10d-x: 150px;
+@10d-y: 50px;
+@10d-offset-x: -150px;
+@10d-offset-y: -50px;
 @10d-width: 50px;
 @10d-height: 50px;
 @10d-total-width: 250px;
 @10d-total-height: 200px;
 @10d-image: '../images/icons.png';
-@10d: 0px 0px 0px 0px 50px 50px 250px 200px '../images/icons.png' '10d';
+@10d: 150px 50px -150px -50px 50px 50px 250px 200px '../images/icons.png' '10d';
 @10n-name: '10n';
-@10n-x: 150px;
-@10n-y: 100px;
-@10n-offset-x: -150px;
-@10n-offset-y: -100px;
+@10n-x: 0px;
+@10n-y: 0px;
+@10n-offset-x: 0px;
+@10n-offset-y: 0px;
 @10n-width: 50px;
 @10n-height: 50px;
 @10n-total-width: 250px;
 @10n-total-height: 200px;
 @10n-image: '../images/icons.png';
-@10n: 150px 100px -150px -100px 50px 50px 250px 200px '../images/icons.png' '10n';
+@10n: 0px 0px 0px 0px 50px 50px 250px 200px '../images/icons.png' '10n';
 @11d-name: '11d';
 @11d-x: 0px;
 @11d-y: 150px;
@@ -210,42 +210,53 @@ At the bottom of this section, we provide information about the spritesheet itse
 @50n-image: '../images/icons.png';
 @50n: 200px 50px -200px -50px 50px 50px 250px 200px '../images/icons.png' '50n';
 @menu-name: 'menu';
-@menu-x: 200px;
+@menu-x: 214px;
 @menu-y: 100px;
-@menu-offset-x: -200px;
+@menu-offset-x: -214px;
 @menu-offset-y: -100px;
 @menu-width: 16px;
 @menu-height: 16px;
 @menu-total-width: 250px;
 @menu-total-height: 200px;
 @menu-image: '../images/icons.png';
-@menu: 200px 100px -200px -100px 16px 16px 250px 200px '../images/icons.png' 'menu';
+@menu: 214px 100px -214px -100px 16px 16px 250px 200px '../images/icons.png' 'menu';
 @next-name: 'next';
-@next-x: 232px;
-@next-y: 100px;
-@next-offset-x: -232px;
-@next-offset-y: -100px;
+@next-x: 200px;
+@next-y: 120px;
+@next-offset-x: -200px;
+@next-offset-y: -120px;
 @next-width: 9px;
 @next-height: 13px;
 @next-total-width: 250px;
 @next-total-height: 200px;
 @next-image: '../images/icons.png';
-@next: 232px 100px -232px -100px 9px 13px 250px 200px '../images/icons.png' 'next';
+@next: 200px 120px -200px -120px 9px 13px 250px 200px '../images/icons.png' 'next';
+@reload-black-name: 'reload_black';
+@reload-black-x: 200px;
+@reload-black-y: 100px;
+@reload-black-offset-x: -200px;
+@reload-black-offset-y: -100px;
+@reload-black-width: 14px;
+@reload-black-height: 20px;
+@reload-black-total-width: 250px;
+@reload-black-total-height: 200px;
+@reload-black-image: '../images/icons.png';
+@reload-black: 200px 100px -200px -100px 14px 20px 250px 200px '../images/icons.png' 'reload_black';
 @search-name: 'search';
-@search-x: 216px;
+@search-x: 230px;
 @search-y: 100px;
-@search-offset-x: -216px;
+@search-offset-x: -230px;
 @search-offset-y: -100px;
 @search-width: 16px;
 @search-height: 16px;
 @search-total-width: 250px;
 @search-total-height: 200px;
 @search-image: '../images/icons.png';
-@search: 216px 100px -216px -100px 16px 16px 250px 200px '../images/icons.png' 'search';
+@search: 230px 100px -230px -100px 16px 16px 250px 200px '../images/icons.png' 'search';
 @spritesheet-width: 250px;
 @spritesheet-height: 200px;
 @spritesheet-image: '../images/icons.png';
-@spritesheet-sprites: @01d @01n @02d @02n @03d @03n @04d @04n @09d @09n @10d @10n @11d @11n @13d @13n @50d @50n @menu @next @search;
+@spritesheet-sprites: @01d @01n @02d @02n @03d @03n @04d @04n @09d @09n @10d @10n @11d @11n @13d @13n @50d @50n @menu @next @reload-black @search;
 @spritesheet: 250px 200px '../images/icons.png' @spritesheet-sprites;
 
 /*
