--- a/src/html/templates/forecast.html
+++ b/src/html/templates/forecast.html
@@ -33,7 +33,7 @@
 				    _.each(item.weather,function(weather, key){
 				%>
 					<div>
-						<div class="icon icon_<%= weather.icon %> icon_weather" title="<%= weather.description %>"></div>
+						<div class="icon icon_inline icon_<%= weather.icon %>" title="<%= weather.description %>"></div>
 
 						<span class="forecast__weather-description"><%= weather.description %></span>
 					</div>
