--- a/src/css/header.less
+++ b/src/css/header.less
@@ -18,6 +18,11 @@
 		padding: 14px;
 		height: 16px;
 		width: 16px;
+		background: transparent;
+
+		&:hover {
+			background: transparent;
+		}
 
 		&:active {
 			padding: 15px 14px 13px 14px;
