--- a/src/css/sprite/icons.less
+++ b/src/css/sprite/icons.less
@@ -23,16 +23,16 @@ At the bottom of this section, we provide information about the spritesheet itse
 @01d-image: '../images/icons.png';
 @01d: 50px 0px -50px 0px 50px 50px 250px 200px '../images/icons.png' '01d';
 @01n-name: '01n';
-@01n-x: 150px;
-@01n-y: 100px;
-@01n-offset-x: -150px;
-@01n-offset-y: -100px;
+@01n-x: 0px;
+@01n-y: 150px;
+@01n-offset-x: 0px;
+@01n-offset-y: -150px;
 @01n-width: 50px;
 @01n-height: 50px;
 @01n-total-width: 250px;
 @01n-total-height: 200px;
 @01n-image: '../images/icons.png';
-@01n: 150px 100px -150px -100px 50px 50px 250px 200px '../images/icons.png' '01n';
+@01n: 0px 150px 0px -150px 50px 50px 250px 200px '../images/icons.png' '01n';
 @02d-name: '02d';
 @02d-x: 0px;
 @02d-y: 50px;
@@ -133,27 +133,27 @@ At the bottom of this section, we provide information about the spritesheet itse
 @10d-image: '../images/icons.png';
 @10d: 150px 50px -150px -50px 50px 50px 250px 200px '../images/icons.png' '10d';
 @10n-name: '10n';
-@10n-x: 0px;
-@10n-y: 0px;
-@10n-offset-x: 0px;
-@10n-offset-y: 0px;
+@10n-x: 150px;
+@10n-y: 100px;
+@10n-offset-x: -150px;
+@10n-offset-y: -100px;
 @10n-width: 50px;
 @10n-height: 50px;
 @10n-total-width: 250px;
 @10n-total-height: 200px;
 @10n-image: '../images/icons.png';
-@10n: 0px 0px 0px 0px 50px 50px 250px 200px '../images/icons.png' '10n';
+@10n: 150px 100px -150px -100px 50px 50px 250px 200px '../images/icons.png' '10n';
 @11d-name: '11d';
 @11d-x: 0px;
-@11d-y: 150px;
+@11d-y: 0px;
 @11d-offset-x: 0px;
-@11d-offset-y: -150px;
+@11d-offset-y: 0px;
 @11d-width: 50px;
 @11d-height: 50px;
 @11d-total-width: 250px;
 @11d-total-height: 200px;
 @11d-image: '../images/icons.png';
-@11d: 0px 150px 0px -150px 50px 50px 250px 200px '../images/icons.png' '11d';
+@11d: 0px 0px 0px 0px 50px 50px 250px 200px '../images/icons.png' '11d';
 @11n-name: '11n';
 @11n-x: 50px;
 @11n-y: 150px;
@@ -209,54 +209,76 @@ At the bottom of this section, we provide information about the spritesheet itse
 @50n-total-height: 200px;
 @50n-image: '../images/icons.png';
 @50n: 200px 50px -200px -50px 50px 50px 250px 200px '../images/icons.png' '50n';
+@bookmark-off-name: 'bookmark_off';
+@bookmark-off-x: 200px;
+@bookmark-off-y: 100px;
+@bookmark-off-offset-x: -200px;
+@bookmark-off-offset-y: -100px;
+@bookmark-off-width: 24px;
+@bookmark-off-height: 24px;
+@bookmark-off-total-width: 250px;
+@bookmark-off-total-height: 200px;
+@bookmark-off-image: '../images/icons.png';
+@bookmark-off: 200px 100px -200px -100px 24px 24px 250px 200px '../images/icons.png' 'bookmark_off';
+@bookmark-on-name: 'bookmark_on';
+@bookmark-on-x: 224px;
+@bookmark-on-y: 100px;
+@bookmark-on-offset-x: -224px;
+@bookmark-on-offset-y: -100px;
+@bookmark-on-width: 24px;
+@bookmark-on-height: 24px;
+@bookmark-on-total-width: 250px;
+@bookmark-on-total-height: 200px;
+@bookmark-on-image: '../images/icons.png';
+@bookmark-on: 224px 100px -224px -100px 24px 24px 250px 200px '../images/icons.png' 'bookmark_on';
 @menu-name: 'menu';
 @menu-x: 214px;
-@menu-y: 100px;
+@menu-y: 124px;
 @menu-offset-x: -214px;
-@menu-offset-y: -100px;
+@menu-offset-y: -124px;
 @menu-width: 16px;
 @menu-height: 16px;
 @menu-total-width: 250px;
 @menu-total-height: 200px;
 @menu-image: '../images/icons.png';
-@menu: 214px 100px -214px -100px 16px 16px 250px 200px '../images/icons.png' 'menu';
+@menu: 214px 124px -214px -124px 16px 16px 250px 200px '../images/icons.png' 'menu';
 @next-name: 'next';
 @next-x: 200px;
-@next-y: 120px;
+@next-y: 144px;
 @next-offset-x: -200px;
-@next-offset-y: -120px;
+@next-offset-y: -144px;
 @next-width: 9px;
 @next-height: 13px;
 @next-total-width: 250px;
 @next-total-height: 200px;
 @next-image: '../images/icons.png';
-@next: 200px 120px -200px -120px 9px 13px 250px 200px '../images/icons.png' 'next';
+@next: 200px 144px -200px -144px 9px 13px 250px 200px '../images/icons.png' 'next';
 @reload-black-name: 'reload_black';
 @reload-black-x: 200px;
-@reload-black-y: 100px;
+@reload-black-y: 124px;
 @reload-black-offset-x: -200px;
-@reload-black-offset-y: -100px;
+@reload-black-offset-y: -124px;
 @reload-black-width: 14px;
 @reload-black-height: 20px;
 @reload-black-total-width: 250px;
 @reload-black-total-height: 200px;
 @reload-black-image: '../images/icons.png';
-@reload-black: 200px 100px -200px -100px 14px 20px 250px 200px '../images/icons.png' 'reload_black';
+@reload-black: 200px 124px -200px -124px 14px 20px 250px 200px '../images/icons.png' 'reload_black';
 @search-name: 'search';
 @search-x: 230px;
-@search-y: 100px;
+@search-y: 124px;
 @search-offset-x: -230px;
-@search-offset-y: -100px;
+@search-offset-y: -124px;
 @search-width: 16px;
 @search-height: 16px;
 @search-total-width: 250px;
 @search-total-height: 200px;
 @search-image: '../images/icons.png';
-@search: 230px 100px -230px -100px 16px 16px 250px 200px '../images/icons.png' 'search';
+@search: 230px 124px -230px -124px 16px 16px 250px 200px '../images/icons.png' 'search';
 @spritesheet-width: 250px;
 @spritesheet-height: 200px;
 @spritesheet-image: '../images/icons.png';
-@spritesheet-sprites: @01d @01n @02d @02n @03d @03n @04d @04n @09d @09n @10d @10n @11d @11n @13d @13n @50d @50n @menu @next @reload-black @search;
+@spritesheet-sprites: @01d @01n @02d @02n @03d @03n @04d @04n @09d @09n @10d @10n @11d @11n @13d @13n @50d @50n @bookmark-off @bookmark-on @menu @next @reload-black @search;
 @spritesheet: 250px 200px '../images/icons.png' @spritesheet-sprites;
 
 /*
