--- a/src/html/templates/main.html
+++ b/src/html/templates/main.html
@@ -1,11 +1,11 @@
 <script type="text/template" id="main_template">
 	<div class="header" id="header">
 		<div class="header__layout clearfix">
-			<a href="#" class="btn header__btn left js-index" id="header_menu">
+			<a href="#" class="btn header__btn left js-index" id="header_menu" title="My cities">
 				<i class="icon icon_menu"></i>
 			</a>
 
-			<a href="#/search/" class="btn header__btn right js-search" id="header_search">
+			<a href="#/search/" class="btn header__btn right js-search" id="header_search" title="Search city">
 				<i class="icon icon_search"></i>
 			</a>
 		</div>
