--- a/src/html/templates/city.html
+++ b/src/html/templates/city.html
@@ -1,12 +1,24 @@
 <script type="text/template" id="city_template">
 	<div class="block">
-		<a href="#" class="js-bookmark_toggle right">+</a>
+		<a href="#" id="js-bookmark_toggle" class="right icon 
+			<% if (inBookmarks === true) { %>
+				icon_bookmark_on
+			<% } else { %>
+				icon_bookmark_off
+			<% } %>
+		"
+			<% if (inBookmarks === true) { %>
+				title="Remove from my cities"
+			<% } else { %>
+				title="Add to my cities"
+			<% } %>
+		></a>
 
 		<h1 class="title"><%= city %></h1>
 
 		<div class="clearfix"></div>
 
-		<a href="#" class="btn btn_button js-update_forecast">
+		<a href="#" id="js-update_forecast" class="btn btn_button">
 			<div class="icon icon_animate_rotate icon_inline icon_reload_black"></div>
 			Update Forecast
 		</a>
